test/files/neg/bug1106.check
bug1106.scala:2: error: expected class or object definition
val p = new Par[String]
^
bug1106.scala:5: error: expected class or object definition
new Foo[p.type](p) // crashes compiler
^
two errors found
